--- a/test/README
+++ b/test/README
@@ -2,28 +2,38 @@ This directory is used for run Selenium test cases.
 
 ./
 	core/			-- Selenium runtime library
-	cases/			-- Test cases sort by suites
-	log/            -- Log the result if cannot send a email
-		ovms/
+	cases/		
+		ovms/           -- Test cases sort by suites
 		...
+	log/                    -- Log the result if cannot send a email
+        unit/      
 	TestSuite.html		-- Index of all test cases
 	postResults.php		-- Do email or log test result
 	test_dao.php.php	-- Database query interface
-	index.html		    -- Provide a directly link to run default test suite
+	index.html		-- Provide a directly link to run default test suite
 	README         		-- This file
 
+Q: How can I install test database?
+A: Warning: This process will cover your fisma database by sql files, so backup database if it necessary.
+   Step:
+	1.Download database file 20080407_r210.rar from: http://140.239.107.107/publish/testdata/20080407_r210.rar
+	2.Unzip the *.sql files to directory test/20080407_r210
+	3.open brower url: http://servername:port/zfentry.php/test/dbrecover
+and then waiting for database loading finished. 
+You could follow the notes and check out your config if it shows failure.      
+
 Q: How to install these test?
-A: See ../apache/openfisma_test.conf and added it to your apache configration.
-   Then you can access it by your brwoser.
+A: View ../conf/apache/conf.d/openfisma_test.conf. Modify its port and path to suit your local condition. Insert "include /yourfilepath/openfisma_test.conf" into the apache config file and restart apache.
+   Then you can access your test page by url:http://servername:port/test/index.html .
 
 Q: How to add a new test case?
-A:	1. Write the new test case through Selenium IDE, see http://wiki.openqa.org/display/SIDE/Recording+a+Test
+A:	1. Write the new test case through Selenium IDE, see http://wiki.openqa.org/display/SIDE/Recording+a+Test .
 	2. Upload it to fit sub directory in cases/ovms/ with a fit name.
-	3. Update TestSuite.html, add a new line like <tr><td><a href="./cases/ovms/new_test.html">new test</a></td></tr> before </tbody> tag.
-	4. Run test with url http://somehost/test/index.html
+	3. Update TestSuite.html, add a new line like <tr><td><a href="./cases/ovms/new_test.html">new test name</a></td></tr> before </tbody> tag.
+	4. Run test with url http://servername:port/test/index.html .
 
 Q: How to get the test result?
-A: There are two ways. First, if you have a sendmail configuration in you PHP.ini, it will auto send a email to you (modify the address in postResults.php).
+A: There are two ways. First, if you have a sendmail configuration in you PHP.ini, it will auto send a email to you (modify the email address in postResults.php).
    Second, if you don't have a sendmail configuration with your PHP.ini, it will just log the test result under directory 'log' as a html file, so please make sure this directory is writable. 
 	
 Enjoy it!
